fixed the desktop sidebox problem and hide the scrollbar in the box

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,29 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+}
+
+.desktop-sidebox {
+  height: 94vh;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
+  margin-left: 3vh;
+  margin-right: 3vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  
+ 
+}
+
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 Canvas {
@@ -51,4 +74,5 @@ Canvas {
 /* Makes the Splash --> Homepage transition less jarring */
 body {
   transition: background-color 1.6s ease;
+  overflow-y: hidden !important; 
 }
